# configure.in -- Process this file with autoconf to produce configure
## Inspired from an example in autobook

AC_INIT(libcgnsoo3,1.0)
AC_CONFIG_SRCDIR(src/file.C)
AC_CONFIG_AUX_DIR(config)
AM_CONFIG_HEADER(config.h)
AM_INIT_AUTOMAKE

dnl Location of the CGNS Mid-level library
CGNSLIBHOME='/usr/local/cgnslib'
AC_ARG_WITH(CGNSLIBHOME, [ --with-CGNSLIBHOME=[path] : path to CGNS installation. Default=/usr/local/cgnslib ], CGNSLIBHOME=$with_CGNSLIBHOME)
AC_SUBST(CGNSLIBHOME)

AC_MSG_CHECKING([path for CGNSLIBHOME: $CGNSLIBHOME])
if test -d "$CGNSLIBHOME"; then
   AC_MSG_RESULT([yes])
else
   AC_MSG_RESULT([no])
   AC_MSG_ERROR([Invalid path for CGNS: $CGNSLIBHOME.])
fi

AC_PROG_CXX
AC_PROG_LIBTOOL

AC_HEADER_STDC
AC_HEADER_SYS_WAIT

AC_C_CONST

AC_SUBST(ac_aux_dir)

AC_OUTPUT([Makefile src/Makefile ],
[test -z "$CONFIG_HEADERS" || echo timestamp > stamp-h.in])

echo \
"------------------------------------------------------------------------
Configuration:

  Source code location:       ${srcdir}
  Compiler CC:                ${CC}
  Compiler CC flags:          ${CFLAGS}
  Compiler CXX:               ${CXX}
  Compiler CXX flags:         ${CXXFLAGS}
  Host System Type:           ${host}
  Install path:               ${prefix}
  CGNSLIB_HOME path:          ${CGNSLIBHOME}

  See config.h for further configuration information.
------------------------------------------------------------------------"
